--- a/src/style.css
+++ b/src/style.css
@@ -20,27 +20,18 @@ body{
 h1{
     color: var(--navy) ;
 }
-/*입력*/
-#inputArea{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: var(--light-navy);
-}
-#inputArea input{
+.inputText{
     border : none;
     border-bottom: 1px solid var(--navy);
     margin: var(--margin);
 }
-#inputArea input:focus{
+.inputText:focus{
     border: none;
     cursor: pointer;
     outline: none;
     border-bottom: 1px solid var(--navy);
 }
-
-/*버튼선택*/
-#choiceArea button{
+button{
     border-radius: 10px;
     border: none;
     margin:calc(var(--margin)*2) var(--margin);
@@ -48,9 +39,20 @@ h1{
     padding: 3px 20px;
     color: var(--light-navy);
 }
+/*입력*/
+.inputArea{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: var(--light-navy);
+}
 
 /*출력된 이름*/
 #nameList{
     margin:calc(var(--margin)) var(--margin);
 
+}
+
+.hidden{
+    display:none;
 }
