--- a/src/style.css
+++ b/src/style.css
@@ -41,6 +41,7 @@ button{
 }
 /*입력*/
 .inputArea{
+    margin-top: calc(var(--margin)*2);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -50,9 +51,4 @@ button{
 /*출력된 이름*/
 #nameList{
     margin:calc(var(--margin)) var(--margin);
-
-}
-
-.hidden{
-    display:none;
 }
